--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Account-analyzer</title>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -10,7 +11,8 @@
         <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/22.1.4/css/dx.dark.css" />
         <script src="https://cdn3.devexpress.com/jslib/22.1.4/js/dx.all.js"></script>
         <link rel="stylesheet" type="text/css" href="index.css" />
-        <script src="index.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+
 
 
     </head>
@@ -18,107 +20,70 @@
         <div class="header-wrapper">
             <div class="grid">
                 <div class="header">
-                    <svg id="quarkus-logo-svg" data-name="Quarkus Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 195">
-                        <defs>
-                            <style>.cls-1 {
-                                fill: #fff;
-                            }
-
-                            .cls-2 {
-                                fill: #4695eb;
-                            }
-
-                            .cls-3 {
-                                fill: #ff004a;
-                            }</style>
-                        </defs>
-                        <title>quarkus_logo_horizontal_rgb_1280px_reverse</title>
-                        <path class="cls-1"
-                              d="M404,89.39q0,25.9-10.49,43.07a52.31,52.31,0,0,1-29.61,23.24l32.3,33.39H373.29l-26.45-30.44-5.11.19q-30,0-46.27-18.22T279.17,89.2q0-32.93,16.34-51.05T341.92,20q29.24,0,45.66,18.45T404,89.39Zm-108.14,0q0,27.39,11.74,41.55t34.11,14.15q22.56,0,34.07-14.11t11.51-41.59q0-27.21-11.47-41.27T341.92,34.05q-22.56,0-34.3,14.16T295.88,89.39Z"/>
-                        <path class="cls-1"
-                              d="M559.56,22.15V109.4q0,23.05-14,36.25T507,158.84q-24.51,0-37.92-13.29T455.7,109V22.15h15.78v88q0,16.88,9.28,25.91t27.29,9q17.16,0,26.45-9.08T543.78,110V22.15Z"/>
-                        <path class="cls-1"
-                              d="M703.6,157,686.7,114.1H632.31L615.6,157h-16L653.29,21.6h13.27L719.93,157Zm-21.82-57L666,58.21q-3.07-7.92-6.32-19.46a172.55,172.55,0,0,1-5.85,19.46l-16,41.78Z"/>
-                        <path class="cls-1"
-                              d="M777.19,100.92V157H761.4V22.15h37.23q25,0,36.89,9.5t11.93,28.59q0,26.74-27.29,36.16L857,157H838.35l-32.86-56.07Zm0-13.47h21.62q16.71,0,24.51-6.6t7.79-19.78q0-13.37-7.93-19.27T797.7,35.89H777.19Z"/>
-                        <path class="cls-1"
-                              d="M999.75,157H981.18L931.71,91.6l-14.2,12.54V157H901.73V22.15h15.78V89l61.54-66.87h18.66L943.13,80.72Z"/>
-                        <path class="cls-1"
-                              d="M1143.69,22.15V109.4q0,23.05-14,36.25t-38.52,13.19q-24.5,0-37.92-13.29T1039.82,109V22.15h15.78v88q0,16.88,9.28,25.91t27.29,9q17.17,0,26.46-9.08t9.28-26.06V22.15Z"/>
-                        <path class="cls-1"
-                              d="M1279,121.11q0,17.8-13,27.76t-35.28,10q-24.13,0-37.13-6.18V137.53a97.82,97.82,0,0,0,18.2,5.53,95.67,95.67,0,0,0,19.49,2q15.78,0,23.76-6t8-16.55q0-7-2.83-11.48t-9.46-8.26q-6.65-3.78-20.19-8.58-18.94-6.72-27.06-16t-8.12-24.07q0-15.58,11.79-24.81t31.18-9.22a92.55,92.55,0,0,1,37.22,7.37l-4.91,13.65q-16.82-7-32.68-7-12.53,0-19.58,5.35t-7.06,14.85q0,7,2.6,11.48t8.77,8.21q6.18,3.73,18.89,8.26,21.36,7.56,29.38,16.23T1279,121.11Z"/>
-                        <polygon class="cls-2" points="126.05 34.6 96.61 51.59 126.05 68.59 126.05 34.6"/>
-                        <polygon class="cls-3" points="67.17 34.6 67.17 68.59 96.61 51.59 67.17 34.6"/>
-                        <polygon class="cls-1" points="126.05 68.59 96.61 51.59 67.17 68.59 96.61 85.59 126.05 68.59"/>
-                        <polygon class="cls-2" points="36.13 88.36 65.57 105.36 65.57 71.37 36.13 88.36"/>
-                        <polygon class="cls-3" points="65.57 139.35 95.01 122.36 65.57 105.36 65.57 139.35"/>
-                        <polygon class="cls-1" points="65.57 71.37 65.57 105.36 95.01 122.36 95.01 88.36 65.57 71.37"/>
-                        <polygon class="cls-2" points="127.65 139.35 127.65 105.36 98.21 122.36 127.65 139.35"/>
-                        <polygon class="cls-3" points="157.09 88.36 127.65 71.37 127.65 105.36 157.09 88.36"/>
-                        <polygon class="cls-1" points="98.21 122.36 127.65 105.36 127.65 71.37 98.21 88.36 98.21 122.36"/>
-                        <path class="cls-2"
-                              d="M160.5,1H32.72A31.81,31.81,0,0,0,1,32.72V160.5a31.81,31.81,0,0,0,31.72,31.72h87.51L96.61,134.85,79.48,171.07H32.72A10.71,10.71,0,0,1,22.15,160.5V32.72A10.71,10.71,0,0,1,32.72,22.15H160.5a10.71,10.71,0,0,1,10.57,10.57V160.5a10.71,10.71,0,0,1-10.57,10.57H132.77l8.71,21.15h19a31.81,31.81,0,0,0,31.72-31.72V32.72A31.81,31.81,0,0,0,160.5,1Z"/>
-                    </svg>
+                    <div class="text-white">beta!</div>
                 </div>
             </div>
         </div>
         <div class="banner-wrapper">
             <div class="grid">
-                <div class="banner">
+                <div class=" container banner">
                     <div class="grid">
                         <div class="callout">Account Analyzer!</div>
-                        <div class="app-details">
-                            <h5>Application Info</h5>
-                            <ul>
-                                <li>GroupId: <code>com.guille</code></li>
-                                <li>ArtifactId: <code>account-analyzer</code></li>
-                                <li>Version: <code>0.3</code></li>
-                                <li>Quarkus Version: <code>2.10.3.Final</code></li>
-                            </ul>
-                        </div>
+<!--                        <div class="app-details">-->
+<!--                            <h5>Application Info</h5>-->
+<!--                            <ul>-->
+<!--                                <li>GroupId: <code>com.guille</code></li>-->
+<!--                                <li>ArtifactId: <code>account-analyzer</code></li>-->
+<!--                                <li>Version: <code>0.3</code></li>-->
+<!--                                <li>Quarkus Version: <code>2.10.3.Final</code></li>-->
+<!--                            </ul>-->
+<!--                        </div>-->
                     </div>
                 </div>
             </div>
         </div>
-        <div class="content-wrapper">
+        <div class="container content-wrapper">
 
-            <div class="grid">
+            <div class=" grid">
                 <div class="left-column">
 
                     <form id="form" method="POST" action="account/analyze" enctype="multipart/form-data">
-                        <p>Choose file to upload : </p>
-                        <div id="file-uploader-container">
-                            <div id="file-uploader"> </div>
+                        <div class="form-group" >
+                            <label for="file-uploader-container" >Choose file to upload :</label>
+                            <div class="form-group" id="file-uploader-container">
+                                <div class="form-group" id="file-uploader"> </div>
+                            </div>
                         </div>
-                        <div>
+                        <div class="form-group" >
                             <label for="bank" >Seleccione Banco :</label>
-                            <select name="bank" id="bank">
+                            <select  class="form-control" name="bank" id="bank">
 <!--                                <option value="-1">Seleccione: </option>-->
                                 <option value="PopularPDF">Popular PDF</option>
                                 <option value="Popular">Popular</option>
                                 <option value="BHD">BHD (Alpha)</option>
+                                <option value="Scotiabank">Scotiabank (pre-Alpha)</option>
                             </select>
                         </div>
-                        <div>
+                        <div class="form-group">
                             <label for="pass" >Password :</label>
-                            <input type="password" name="pass" id="pass" value="22300843194">
+                            <input  class="form-control" type="password" name="pass" id="pass" value="">
                         </div>
-                        <div id="button"></div>
+                        <div  class="btn btn-primary" id="button"></div>
                     </form>
-
+<br>
                     <h3>Result of Analysis : </h3>
 
-                    <ul class="provided-code">
-                        <li id="commissions" class="text-category">Commissions :
+                    <ul class=" list-group provided-code">
+                        <li id="commissions" class="list-group-item text-category">Commissions :
                             <ul id="commissionsTrans" class="provided-code"></ul>
                         </li>
-                        <li id="interest" class="text-category" >Interest :
+                        <li id="interest" class="list-group-item text-category" >Interest :
                             <ul id="interestTrans" class="provided-code"></ul>
                         </li>
-                        <li id="nonPaymentFee" class="text-category" >NonPaymentFee :
+                        <li id="nonPaymentFee" class="list-group-item text-category" >NonPaymentFee :
                             <ul id="nonPaymentFeeTrans" class="provided-code"></ul>
                         </li>
-                        <li id="taxes" class="text-category">Taxes :
+                        <li id="taxes" class="list-group-item text-category">Taxes :
                             <ul id="taxesTrans" class="provided-code"></ul>
                         </li>
                     </ul>
@@ -127,5 +92,8 @@
                 </div>
             </div>
         </div>
+
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
