--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -61,6 +61,7 @@
                                 <option value="PopularPDF">Popular PDF</option>
                                 <option value="Popular">Popular</option>
                                 <option value="BHD">BHD (Alpha)</option>
+                                <option value="BHDPDF">BHD PDF (Alpha)</option>
                                 <option value="Scotiabank">Scotiabank (pre-Alpha)</option>
                             </select>
                         </div>
