--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -90,6 +90,10 @@
                     </ul>
                     <br>
                     <p> <b>Total :</b> <span id="total"></span></p>
+                    <br>
+                    <div>
+                    <a href="deduction.html" >Agregar  nueva deduccion </a>
+                </div>
                 </div>
             </div>
         </div>
