add h2 + h2 console + close app

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -16,11 +16,10 @@
 
 
     </head>
-    <body>
+    <body >
         <div class="header-wrapper">
             <div class="grid">
-                <div class="header">
-                    <div class="text-white">beta!</div>
+                <div class="p-2">
                 </div>
             </div>
         </div>
@@ -42,7 +41,23 @@
                 </div>
             </div>
         </div>
-        <div class="container content-wrapper">
+        <div class="header-wrapper">
+            <div class="grid">
+                <div class="header">
+                    <div class="left-column p-1">
+                        <span class="text-white">Opciones : </span>
+                        <a href="deduction.html" class="btn btn-success " >Agregar  nueva deduccion </a>
+
+                        <a href="/h2-console" class="btn btn-warning " >H2 Console </a>
+
+                        <button id="bClose"  class="btn btn-danger " >Cerrar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="mainContainer" class="container content-wrapper">
+
+
 
             <div class=" grid">
                 <div class="left-column">
@@ -91,9 +106,7 @@
                     <br>
                     <p> <b>Total :</b> <span id="total"></span></p>
                     <br>
-                    <div>
-                    <a href="deduction.html" >Agregar  nueva deduccion </a>
-                </div>
+
                 </div>
             </div>
         </div>
