save deductions with ajax

--- a/src/main/resources/META-INF/resources/deduction.html
+++ b/src/main/resources/META-INF/resources/deduction.html
@@ -11,7 +11,7 @@
         <script src="https://cdn3.devexpress.com/jslib/22.1.4/js/dx.all.js"></script>
         <link rel="stylesheet" type="text/css" href="index.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-<!--        <script src="index.js"></script>-->
+        <script src="deduction.js"></script>
 
 
     </head>
@@ -88,8 +88,12 @@
                             <label for="description" >Descripción Deducción :</label>
                             <input class="form-control" type="text" name="description" id="description" value="">
                         </div>
+                        <div>
 
-                        <button id="button" class="btn btn-primary"> Enviar</button>
+                        <button id="button-send" class="btn btn-primary"> Enviar</button>
+                        <a  class="btn btn-primary" href="deduction/list"> Ver Deducciones</a>
+                        <a  class="btn btn-success" href="/"> Ir A Inicio</a>
+                        </div>
 
                     </form>
 
