remove and  update table

--- a/src/main/resources/META-INF/resources/deduction.html
+++ b/src/main/resources/META-INF/resources/deduction.html
@@ -96,7 +96,7 @@
                         <div>
 
                         <button id="button-send" class="btn btn-primary"> Enviar</button>
-                        <a  class="btn btn-primary" href="deduction/list"> Ver Deducciones</a>
+<!--                        <a  class="btn btn-primary" href="deduction/list"> Ver Deducciones</a>-->
                         <a  class="btn btn-success" href="/"> Ir A Inicio</a>
                         </div>
 
