--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -72,7 +72,7 @@
                             <select  class="form-control" name="bank" id="bank">
 <!--                                <option value="-1">Seleccione: </option>-->
                                 <option value="PopularPDF">Popular PDF</option>
-                                <option value="Popular">Popular</option>
+                                <option value="Popular">Popular CSV</option>
                                 <option value="BHD">BHD (Alpha)</option>
                                 <option value="BHDPDF">BHD PDF (Alpha)</option>
                                 <option value="Scotiabank">Scotiabank (pre-Alpha)</option>
