--- a/src/main/resources/META-INF/resources/deduction.html
+++ b/src/main/resources/META-INF/resources/deduction.html
@@ -5,10 +5,6 @@
         <title>Account-analyzer</title>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<!--        <script>window.jQuery || document.write(decodeURIComponent('%3Cscript src="js/jquery.min.js"%3E%3C/script%3E'))</script>-->
-<!--        <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/22.1.4/css/dx.common.css" />-->
-<!--        <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/22.1.4/css/dx.dark.css" />-->
-<!--        <script src="https://cdn3.devexpress.com/jslib/22.1.4/js/dx.all.js"></script>-->
         <link rel="stylesheet" type="text/css" href="index.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
@@ -23,7 +19,7 @@
             <div class="grid">
                 <div class="left-column">
 
-                    <h2>Crear Deducción : </h2>
+                    <h2>Crear Deducción: </h2>
                     <br/>
                     <form id="form" method="POST" action="deduction" enctype="multipart/form-data" >
                         <div   class="form-group" >
@@ -35,6 +31,7 @@
                                 <option value="TAXES">Impuestos</option>
                                 <option value="INTEREST">Intereses</option>
                                 <option value="NON_PAYMENT_FEE">Recargos( mora ) </option>
+                                <option value="USER_INTEREST">De Interés Del Usuario </option>
                             </select>
                         </div>
                         <div  class="form-group" >
