--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -99,6 +99,9 @@
                         <li id="taxes" class="list-group-item text-category">Taxes :
                             <ul id="taxesTrans" class="provided-code"></ul>
                         </li>
+                        <li id="userInterest" class="list-group-item text-category">User Interest :
+                            <ul id="userInterestTrans" class="provided-code"></ul>
+                        </li>
                     </ul>
                     <br>
                     <p> <b>Total :</b> <span id="total"></span></p>
