--- a/src/main/resources/META-INF/resources/deduction.html
+++ b/src/main/resources/META-INF/resources/deduction.html
@@ -32,6 +32,7 @@
                                 <option value="INTEREST">Intereses</option>
                                 <option value="NON_PAYMENT_FEE">Recargos( mora ) </option>
                                 <option value="USER_INTEREST">De Interés Del Usuario </option>
+                                <option value="USER_INTEREST_OUT_TOTAL">De Interés Del Usuario (fuera del Total) </option>
                             </select>
                         </div>
                         <div  class="form-group" >
