--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -106,6 +106,12 @@
                     <br>
                     <p> <b>Total :</b> <span id="total"></span></p>
                     <br>
+                    <ul class=" list-group provided-code">
+                        <li id="userInterestOutTotal" class="list-group-item text-category">User Interest Sin Afectar el Total :
+                            <ul id="userInterestOutTotalTrans" class="provided-code"></ul>
+                        </li>
+                    </ul>
+                    <br>
 
                 </div>
             </div>
